[gd_scene load_steps=10 format=3 uid="uid://dm66v1hb8ydl6"]

[ext_resource type="Texture2D" uid="uid://dah5vpteklwy5" path="res://Resource/img/map/holo/101_thumbnail.png" id="1_ncw20"]
[ext_resource type="Script" path="res://src/holo/holo_ui.gd" id="1_yi3ne"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ar1mq"]
bg_color = Color(0.588235, 0.588235, 0.588235, 0.588235)
corner_radius_top_left = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_kflcq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/VBoxContainer/SpecialSelect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/VBoxContainer/SpecialSelect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(220, 130)]
}

[sub_resource type="Animation" id="Animation_h2efw"]
resource_name = "hide_special"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/VBoxContainer/SpecialSelect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/VBoxContainer/SpecialSelect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(220, 130), Vector2(220, 104)]
}

[sub_resource type="Animation" id="Animation_fiamj"]
resource_name = "show_special"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(220, 104), Vector2(220, 130)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/VBoxContainer/SpecialSelect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/VBoxContainer/SpecialSelect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.04, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d7m0a"]
_data = {
"RESET": SubResource("Animation_kflcq"),
"hide_special": SubResource("Animation_h2efw"),
"show_special": SubResource("Animation_fiamj")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ms8qv"]
bg_color = Color(0.933333, 0.933333, 0.933333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uajgx"]
bg_color = Color(0.588235, 0.588235, 0.588235, 0.588235)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="HoloUi" type="CanvasLayer"]
script = ExtResource("1_yi3ne")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_bottom = 130.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ar1mq")

[node name="Control" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -213.0
offset_top = 78.0
offset_right = -7.0
offset_bottom = 122.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WorldSelect" type="OptionButton" parent="Panel/Control/VBoxContainer"]
layout_mode = 2

[node name="SpecialSelect" type="OptionButton" parent="Panel/Control/VBoxContainer"]
layout_mode = 2
item_count = 1
popup/item_0/text = ""
popup/item_0/id = 0

[node name="BtnBackToMap" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -186.0
offset_top = 20.0
offset_right = -26.0
offset_bottom = 48.0
grow_horizontal = 0
text = "{btn_back_to_map}"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
libraries = {
"": SubResource("AnimationLibrary_d7m0a")
}

[node name="WorldSelect_old" type="HBoxContainer" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -233.0
offset_right = 100.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="WorldSelect_old"]
custom_minimum_size = Vector2(200, 112)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ms8qv")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="WorldSelect_old/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.8

[node name="TextureRect" type="TextureRect" parent="WorldSelect_old/Panel/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("1_ncw20")
expand_mode = 1

[node name="WorldTitle" type="Panel" parent="."]
offset_left = 40.0
offset_top = 48.0
offset_right = 240.0
offset_bottom = 112.0
scale = Vector2(1.3, 1.3)
theme_override_styles/panel = SubResource("StyleBoxFlat_uajgx")

[node name="TextureRect" type="TextureRect" parent="WorldTitle"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 64.0
grow_vertical = 2

[node name="LblMap" type="Label" parent="WorldTitle"]
layout_mode = 0
offset_left = 71.5
offset_top = 12.0
offset_right = 144.5
offset_bottom = 35.0
text = "{lbl_map}"

[node name="LblWorld" type="Label" parent="WorldTitle"]
layout_mode = 1
offset_left = 71.5
offset_top = 38.0
offset_right = 154.5
offset_bottom = 61.0
scale = Vector2(0.8, 0.8)
text = "{lbl_world}"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="item_selected" from="Panel/Control/VBoxContainer/WorldSelect" to="." method="_on_world_select_item_selected"]
[connection signal="pressed" from="Panel/BtnBackToMap" to="." method="_on_btn_back_to_map_pressed"]
